# tig-circuit-tools

./: .gitignore  Cargo.toml  README.md  ZK_CHALLENGE_DOCUMENTATION.md  ZK_CHALLENGE_WALKTHROUGH.md
examples/: analyze_spartan.rs  complete_workflow.rs  generate_circuit.rs
src/: lib.rs
src/analysis/: circom_tools.rs  dag_analysis.rs  mod.rs  spartan_tools.rs
src/converters/: circom.rs  mod.rs  spartan.rs
src/dag/: config.rs  generator.rs  mod.rs  node.rs
